crates/uitest/fixtures/name_resolution/conflict_variant.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/conflict_variant.fe
---
error[3-0018]: duplicate variant name in enum `MyE`
  ┌─ conflict_variant.fe:2:5
  │
2 │     Var1,
  │     ^^^^ `Var1` is defined here
3 │     Var2,
4 │     Var1,
  │     ---- `Var1` is redefined here
